[gd_scene load_steps=16 format=3 uid="uid://e1tc763qh322"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_2frrq"]
[ext_resource type="Script" path="res://Player/camera_3d.gd" id="2_nqw1s"]
[ext_resource type="PackedScene" uid="uid://qy5val78g25k" path="res://Weapons/SMG.tscn" id="3_ejtk0"]
[ext_resource type="Script" path="res://Player/control.gd" id="3_i1c6g"]
[ext_resource type="PackedScene" uid="uid://doo4n2vvbtq6d" path="res://Weapons/Rifle.tscn" id="3_og1ru"]
[ext_resource type="Script" path="res://Player/weapon_handler.gd" id="3_v0uue"]
[ext_resource type="Texture2D" uid="uid://be1iamteby7ra" path="res://Assets/damage.png" id="4_dgcqd"]
[ext_resource type="Script" path="res://Player/ammo_handler.gd" id="6_c6o2t"]
[ext_resource type="PackedScene" uid="uid://cfqidh6urouti" path="res://Player/game_over_screen.tscn" id="6_m2v75"]
[ext_resource type="FontFile" uid="uid://dllk2y0n3oimr" path="res://Assets/Staatliches/Staatliches-Regular.ttf" id="8_emwwo"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_o7v03"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ngmov"]

[sub_resource type="Animation" id="Animation_vmr0m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_rwyb4"]
resource_name = "take_damage"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lbttn"]
_data = {
"RESET": SubResource("Animation_vmr0m"),
"take_damage": SubResource("Animation_rwyb4")
}

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_2frrq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_o7v03")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_ngmov")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="SmoothCamera" type="Camera3D" parent="CameraPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.68874, 0)
top_level = true
script = ExtResource("2_nqw1s")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="CameraPivot/SmoothCamera"]
remote_path = NodePath("../../../SubViewportContainer/SubViewport/WeaponCamera")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="WeaponCamera" type="Camera3D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.68874, 0)
cull_mask = 2

[node name="WeaponHandler" type="Node3D" parent="SubViewportContainer/SubViewport/WeaponCamera" node_paths=PackedStringArray("weapon_1", "weapon_2")]
script = ExtResource("3_v0uue")
weapon_1 = NodePath("Rifle")
weapon_2 = NodePath("SMG")

[node name="Rifle" parent="SubViewportContainer/SubViewport/WeaponCamera/WeaponHandler" node_paths=PackedStringArray("ammo_handler") instance=ExtResource("3_og1ru")]
fire_rate = 1.0
ammo_handler = NodePath("../../AmmoHandler")

[node name="SMG" parent="SubViewportContainer/SubViewport/WeaponCamera/WeaponHandler" node_paths=PackedStringArray("ammo_handler") instance=ExtResource("3_ejtk0")]
ammo_handler = NodePath("../../AmmoHandler")
ammo_bullet = 1

[node name="AmmoHandler" type="Node" parent="SubViewportContainer/SubViewport/WeaponCamera" node_paths=PackedStringArray("ammo_label", "weapon_handler")]
unique_name_in_owner = true
script = ExtResource("6_c6o2t")
ammo_label = NodePath("../../../../MarginContainer/AmmoLabel")
weapon_handler = NodePath("../WeaponHandler")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control" type="Control" parent="CenterContainer"]
layout_mode = 2
script = ExtResource("3_i1c6g")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="AmmoLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("8_emwwo")
theme_override_font_sizes/font_size = 58
text = "999"

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)
mouse_filter = 2
texture = ExtResource("4_dgcqd")

[node name="TakeDamageAnimation" type="AnimationPlayer" parent="TextureRect"]
libraries = {
"": SubResource("AnimationLibrary_lbttn")
}

[node name="GameOverScreen" parent="." instance=ExtResource("6_m2v75")]
visible = false
